syntax = "proto3";
package credentials;

// -- CREDENTIALS REVOCATION ---------------------------------------------

enum RevocationStatus {
    REVOKED = 0;
    SUSPENDED = 1;
    VALID = 2;
}

message RevocationCheckRequest {
    string type = 1;
    string url = 2;
    map<string, string> properties = 3;
}

message RevocationCheckResponse {
    RevocationStatus status = 1;
}

service CredentialRevocation {
    rpc check(RevocationCheckRequest) returns (RevocationCheckResponse);
}

message JwtCreationRequest {
    string credential_json = 1;
    string issuer_fragment = 2;
}

message JwtCreationResponse {
    string jwt = 1;
}

service Jwt {
    rpc create(JwtCreationRequest) returns (JwtCreationResponse);
}

message VcValidationRequest {
    string credential_jwt = 1;
    optional string status_list_credential_json = 2;
}

message VcValidationResponse {
    string credential_json = 1;
}

service VcValidation {
    rpc validate(VcValidationRequest) returns (VcValidationResponse);
}