// Copyright 2020-2024 IOTA Stiftung
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";
package domain_linkage;

message ValidDomain {
    string service_id = 1;
    string url = 2;
    string credential = 3;
}

message InvalidDomain {
    string service_id = 1;
    optional string credential = 2;
    string url = 3;
    string error = 4;
}

message ValidateDidResponse {
    string did = 1;
    message Domains {
        repeated ValidDomain valid = 1;
        repeated InvalidDomain invalid = 2;
    }
    Domains domains = 2;
}

message ValidDid {
    string service_id = 1;
    string did = 2;
    string credential = 3;
}

message InvalidDid {
    optional string service_id = 1;
    optional string credential = 2;
    optional string did = 3;
    string error = 4;
}

message ValidateDomainResponse {
    string domain = 1;
    message LinkedDid {
        repeated ValidDid valid = 1;
        repeated InvalidDid invalid = 2;
    }
    LinkedDid linked_dids = 2;
}

message ValidateDomainRequest {
    // domain to validate
    string domain = 1;
}

message ValidateDomainAgainstDidConfigurationRequest {
    // domain to validate
    string domain = 1;
    // already resolved domain linkage config
    string did_configuration = 2;
}

message ValidateDidRequest {
    // DID to validate
    string did = 1;
}

message ValidateDidAgainstDidConfigurationsRequest {
    // DID to validate
    string did = 1;
    // already resolved domain linkage configs
    repeated ValidateDomainAgainstDidConfigurationRequest did_configurations = 2;
}

service DomainLinkage {
    rpc validate_domain(ValidateDomainRequest) returns (ValidateDomainResponse);
    rpc validate_domain_against_did_configuration(
        ValidateDomainAgainstDidConfigurationRequest)
        returns (ValidateDomainResponse);

    rpc validate_did(ValidateDidRequest) returns (ValidateDidResponse);
    rpc validate_did_against_did_configurations(
        ValidateDidAgainstDidConfigurationsRequest) returns (ValidateDidResponse);
}